kubernetes_feature.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "thedoers-canary"
  namespace: "default"
  labels:
    app: "thedoers"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "thedoers"
      release: "latest"
  template:
    metadata:
      labels:
        app: "thedoers"
        release: "latest"
    spec:
      containers:
      - name: "thedoers"
        image: "us-central1-docker.pkg.dev/k8-playground-artiq-381720/thedoers/thedoers:latest"
        resources:
          limits:
            memory: "64Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: artifact-registry
