kubernetes.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "thedoers"
  namespace: "default"
  labels:
    app: "thedoers"
spec:
  replicas: 9
  selector:
    matchLabels:
      app: "thedoers"
      release: "stable"
  template:
    metadata:
      labels:
        app: "thedoers"
        release: "stable"
    spec:
      containers:
      - name: "thedoers"
        image: "us-central1-docker.pkg.dev/k8-playground-artiq-381720/thedoers/thedoers:stable"
        resources:
          limits:
            memory: "64Mi"
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: artifact-registry

---
apiVersion: v1
kind: Service
metadata:
  name: thedoers
spec:
  selector:
    app: thedoers
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: LoadBalancer

# ---

# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: thedoers-hpa
#   namespace: "default"
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: thedoers
#   minReplicas: 1
#   maxReplicas: 20
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: thedoers
spec:
  host: thedoers
  subsets:
  - name: stable
    labels:
      release: stable
  - name: canary
    labels:
      release: latest


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: thedoers
spec:
  hosts: 
  - thedoers.com
  http:
  - route:
    - destination:
        host: thedoers
        subset: stable
      weight: 90
    - destination:
        host: thedoers
        subset: canary
      weight: 10
